Fix title text. I let it overlap occassionally, as it's not worth the hassle

--- a/Styles/hacker.css
+++ b/Styles/hacker.css
@@ -8,7 +8,7 @@
 
 #logo {
 	position: absolute;
-	top: 10px;
+	top: 5px;
 	left: 5px;
 	height: 80px;
 	width: 80px;
@@ -19,7 +19,7 @@
 	margin: 0 auto;
 }
 
-body {
+body, html {
 	background: linear-gradient(122deg, #222 0%, #111 100%);
 	height: 100%;
 	background-repeat: no-repeat;
@@ -36,6 +36,5 @@ h1{
 
 #title-container{
 	width: fit-content;
-	max-width: calc(100% - 120px);	/* Don't clip the logo */
 	margin: 0 auto;
 }
